--- a/HMI1/Properties/tchmiconfig.json
+++ b/HMI1/Properties/tchmiconfig.json
@@ -3,14 +3,14 @@
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
-  "loginPage": "/Pages/LoginPage.html",
+  "loginPage": "",
   "tcHmiServer": {
     "websocketIntervalTime": 500,
     "websocketTimeout": 20000,
     "websocketSystemTimeout": 60000,
     "websocketSubscriptionMode": "Change"
   },
-  "activeTheme": "Base-Dark",
+  "activeTheme": "Base",
   "themes": {
     "Base-Dark": {
       "resources": [
@@ -50,24 +50,12 @@
       "name": "Fonts/Fonts.css",
       "description": "",
       "type": "Stylesheet"
-    },
-    {
-      "name": "Functions/UpdateLanguageIcon.js",
-      "description": "",
-      "type": "JavaScript"
     }
   ],
   "userControls": [],
   "content": [
     {
-      "url": "Pages/HostContent.content",
-      "preload": false,
-      "keepAlive": false,
-      "loadSync": false,
-      "preloadBindings": false
-    },
-    {
-      "url": "Pages/Welcome.content",
+      "url": "Overview.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -82,11 +70,7 @@
       "preloadBindings": false
     }
   ],
-  "userFunctions": [
-    {
-      "url": "Functions/UpdateLanguageIcon.js"
-    }
-  ],
+  "userFunctions": [],
   "symbols": {
     "internal": {},
     "themedResources": {}
@@ -101,8 +85,8 @@
   "disableLoadingOptimization": false,
   "creatorSettings": {
     "viewport": {
-      "defaultWidth": 1024,
-      "defaultHeight": 768
+      "defaultWidth": 800,
+      "defaultHeight": 600
     }
   },
   "binding": {
@@ -120,10 +104,6 @@
     {
       "name": "Beckhoff.TwinCAT.HMI.Functions",
       "basePath": "/Beckhoff.TwinCAT.HMI.Functions"
-    },
-    {
-      "name": "Beckhoff.TwinCAT.HMI.ResponsiveNavigation",
-      "basePath": "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation"
     }
   ],
   "keyboardLayouts": [
