--- a/HMI1/Properties/tchmiconfig.json
+++ b/HMI1/Properties/tchmiconfig.json
@@ -62,14 +62,14 @@
       "preloadBindings": false
     },
     {
-      "url": "Setting.content",
+      "url": "Alarm.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
       "preloadBindings": false
     },
     {
-      "url": "Alarm.content",
+      "url": "Setting.content",
       "preload": false,
       "keepAlive": false,
       "loadSync": false,
@@ -90,7 +90,108 @@
     "themedResources": {}
   },
   "trigger": [],
-  "actionTemplates": [],
+  "actionTemplates": [
+    {
+      "displayname": "DisplayCylinderState",
+      "name": "DisplayCylinderState",
+      "category": "Action Templates",
+      "actions": [
+        {
+          "objectType": "Condition",
+          "active": true,
+          "parts": [
+            {
+              "if": [
+                {
+                  "compare1": {
+                    "objectType": "FunctionExpression",
+                    "functionExpression": "%f%%f%%f%%f%%f%%f%%tp%bFaulted%/tp%%/f%%/f%%/f%%/f%%/f%%/f%"
+                  },
+                  "compare2": {
+                    "objectType": "StaticValue",
+                    "valueType": "tchmi:general#/definitions/BOOL",
+                    "value": true
+                  },
+                  "compareOperator": "==",
+                  "logic": null
+                }
+              ],
+              "then": [
+                {
+                  "objectType": "JavaScript",
+                  "active": true,
+                  "sourceLines": [],
+                  "injectContextObject": false,
+                  "asyncWait": true,
+                  "waitMode": "Synchronous"
+                }
+              ]
+            },
+            {
+              "else": [
+                {
+                  "objectType": "Condition",
+                  "active": true,
+                  "parts": [
+                    {
+                      "if": [
+                        {
+                          "compare1": {
+                            "objectType": "Symbol",
+                            "valueType": null,
+                            "symbolExpression": "%tp%bExtended%/tp%"
+                          },
+                          "compare2": {
+                            "objectType": "StaticValue",
+                            "valueType": "tchmi:general#/definitions/BOOL",
+                            "value": true
+                          },
+                          "compareOperator": "==",
+                          "logic": null
+                        }
+                      ],
+                      "then": [
+                        {
+                          "objectType": "JavaScript",
+                          "active": true,
+                          "sourceLines": [],
+                          "injectContextObject": false,
+                          "asyncWait": true,
+                          "waitMode": "Synchronous"
+                        }
+                      ]
+                    },
+                    {
+                      "else": []
+                    }
+                  ],
+                  "asyncWait": true
+                }
+              ]
+            }
+          ],
+          "asyncWait": true
+        }
+      ],
+      "parameters": [
+        {
+          "name": "ctlCylinderState",
+          "type": "tchmi:framework#/definitions/TcHmiControl",
+          "description": ""
+        },
+        {
+          "name": "bFaulted",
+          "type": "tchmi:general#/definitions/BOOL",
+          "description": ""
+        },
+        {
+          "name": "bExtended",
+          "type": "tchmi:general#/definitions/BOOL",
+          "description": ""
+        }
+      ]
+    }
+  ],
   "languages": {
     "de": "Localization/de.localization",
     "en": "Localization/en.localization"
