--- a/HMI1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/HMI1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -2745,6 +2745,23 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_bReset": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_bReset",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/BOOL"
+                    },
+                    {
+                        "comment": "reset signal"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_bVB1": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -3961,6 +3978,7 @@
                 "PLC1.GVL_HMI.i_bPE4": 3,
                 "PLC1.GVL_HMI.i_bPE5": 3,
                 "PLC1.GVL_HMI.i_bPS1": 3,
+                "PLC1.GVL_HMI.i_bReset": 3,
                 "PLC1.GVL_HMI.i_bVB1": 3,
                 "PLC1.GVL_HMI.i_bVB2": 3,
                 "PLC1.GVL_HMI.i_nCylinder1State": 3,
