--- a/_Assets/requirements.txt
+++ b/_Assets/requirements.txt
@@ -16,15 +16,14 @@ Active alarms list
 
 Plan:
 	Setting Page
-	Alarm List Page
+	Alarm List Page ( Reset, ManualMode )
 	m3 motor
-	Process Reset button
-		OilPump:goto 0, Count:0
 Qusetion 1:
 If Low Oil Level Sw or High Oil Temp, PLC should inhivit pump.
 At that time, shouldn't Core Swagging stop?
 Question 2:
-Should output signal like X2.2 and X2.3 show on HMI?
+Shouldn't Pump State display on HMI?
+Question 3:
 The position of Cylinders don't match with design pdf file.
 ex) ID: Cy1: X2.8/2.9, PDF: Cy1: 2.2/2.3
 Question 3:
