--- a/HMI1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/HMI1/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -2508,6 +2508,23 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_b24VDC_CB_OK": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_b24VDC_CB_OK",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/BOOL"
+                    },
+                    {
+                        "comment": "safeties"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_bCyl1E": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2678,6 +2695,16 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_bLS1": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_bLS1",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/BOOL"
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_bPE1": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2762,6 +2789,16 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_bTS1": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_bTS1",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/BOOL"
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_bVB1": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2789,6 +2826,84 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_nCasingCountForStarting": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCasingCountForStarting",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "settings"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCoreCountForStarting": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCoreCountForStarting",
+            "SCHEMA": {
+                "$ref": "tchmi:general#/definitions/INT"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCoreSwagingMode": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCoreSwagingMode",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "0: Auto, 1: Manual"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder1ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder1ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder1RetractedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder1RetractedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_nCylinder1State": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2801,6 +2916,40 @@
                     },
                     {
                         "comment": "-1:Faulted, 0:Extended, 1:Retracting, 2: Retracted, 3:Extending"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder2ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder2ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder2RetractedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder2RetractedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
                     }
                 ]
             },
@@ -2823,6 +2972,40 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_nCylinder3ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder3ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder3RetractedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder3RetractedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_nCylinder3State": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2835,6 +3018,40 @@
                     },
                     {
                         "comment": "-1:Faulted, 0:Extended, 1:Retracting, 2: Retracted, 3:Extending"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder4ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder4ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nCylinder4RetractedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinder4RetractedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
                     }
                 ]
             },
@@ -2908,6 +3125,57 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_nCylinderFeedbackCheckingTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nCylinderFeedbackCheckingTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPCylinder1ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder1ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPCylinder1RetractedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder1RetractedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_nPCylinder1State": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2925,6 +3193,23 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_HMI.i_nPCylinder2ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder2ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_HMI.i_nPCylinder2State": {
             "ACCESS": 3,
             "DOMAIN": "TMC",
@@ -2937,6 +3222,142 @@
                     },
                     {
                         "comment": "-1:Faulted, 0:Extended, 1:Retracting, 2: Retracted, 3:Extending"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPCylinder3ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder3ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPCylinder4ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder4ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPCylinder5ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder5ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPCylinder6ExtendedRunningTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPCylinder6ExtendedRunningTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPE4MaintainTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPE4MaintainTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPE6MaintainTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPE6MaintainTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPumpFeedbackCheckingTime": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPumpFeedbackCheckingTime",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "ms"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_HMI.i_nPumpState": {
+            "ACCESS": 3,
+            "DOMAIN": "TMC",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_HMI::i_nPumpState",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "$ref": "tchmi:general#/definitions/INT"
+                    },
+                    {
+                        "comment": "-1:Faulted, 0:Stop, 2:Running"
                     }
                 ]
             },
@@ -3972,6 +4393,7 @@
                 "PLC1.GVL_HMI.i_bCyl8E": 3,
                 "PLC1.GVL_HMI.i_bCyl8R": 3,
                 "PLC1.GVL_HMI.i_bESR1": 3,
+                "PLC1.GVL_HMI.i_bLS1": 3,
                 "PLC1.GVL_HMI.i_bPE1": 3,
                 "PLC1.GVL_HMI.i_bPE2": 3,
                 "PLC1.GVL_HMI.i_bPE3": 3,
@@ -3979,18 +4401,42 @@
                 "PLC1.GVL_HMI.i_bPE5": 3,
                 "PLC1.GVL_HMI.i_bPS1": 3,
                 "PLC1.GVL_HMI.i_bReset": 3,
+                "PLC1.GVL_HMI.i_bTS1": 3,
                 "PLC1.GVL_HMI.i_bVB1": 3,
                 "PLC1.GVL_HMI.i_bVB2": 3,
+                "PLC1.GVL_HMI.i_nCasingCountForStarting": 3,
+                "PLC1.GVL_HMI.i_nCoreCountForStarting": 3,
+                "PLC1.GVL_HMI.i_nCoreSwagingMode": 3,
+                "PLC1.GVL_HMI.i_nCylinder1ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nCylinder1RetractedRunningTime": 3,
                 "PLC1.GVL_HMI.i_nCylinder1State": 3,
+                "PLC1.GVL_HMI.i_nCylinder2ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nCylinder2RetractedRunningTime": 3,
                 "PLC1.GVL_HMI.i_nCylinder2State": 3,
+                "PLC1.GVL_HMI.i_nCylinder3ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nCylinder3RetractedRunningTime": 3,
                 "PLC1.GVL_HMI.i_nCylinder3State": 3,
+                "PLC1.GVL_HMI.i_nCylinder4ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nCylinder4RetractedRunningTime": 3,
                 "PLC1.GVL_HMI.i_nCylinder4State": 3,
                 "PLC1.GVL_HMI.i_nCylinder5State": 3,
                 "PLC1.GVL_HMI.i_nCylinder6State": 3,
                 "PLC1.GVL_HMI.i_nCylinder7State": 3,
                 "PLC1.GVL_HMI.i_nCylinder8State": 3,
+                "PLC1.GVL_HMI.i_nCylinderFeedbackCheckingTime": 3,
+                "PLC1.GVL_HMI.i_nPCylinder1ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nPCylinder1RetractedRunningTime": 3,
                 "PLC1.GVL_HMI.i_nPCylinder1State": 3,
+                "PLC1.GVL_HMI.i_nPCylinder2ExtendedRunningTime": 3,
                 "PLC1.GVL_HMI.i_nPCylinder2State": 3,
+                "PLC1.GVL_HMI.i_nPCylinder3ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nPCylinder4ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nPCylinder5ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nPCylinder6ExtendedRunningTime": 3,
+                "PLC1.GVL_HMI.i_nPE4MaintainTime": 3,
+                "PLC1.GVL_HMI.i_nPE6MaintainTime": 3,
+                "PLC1.GVL_HMI.i_nPumpFeedbackCheckingTime": 3,
+                "PLC1.GVL_HMI.i_nPumpState": 3,
                 "PLC1.GVL_HMI.i_rPT1": 3,
                 "PLC1.GVL_HMI.i_rPT2": 3,
                 "PLC1.GVL_HMI.nCasingCount": 3,
